[gd_scene load_steps=4 format=3 uid="uid://y1y4i0lvdt4l"]

[ext_resource type="Script" path="res://User_Battle/Script/battle_ui.gd" id="1_mt36e"]
[ext_resource type="Script" path="res://User_Battle/Script/enemy.gd" id="2_kw82d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_akw03"]

[node name="Battle UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_mt36e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="BattleBackground" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Enemy_Health_Bar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_kw82d")

[node name="Health" type="ProgressBar" parent="CanvasLayer/Enemy_Health_Bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 110.0
offset_top = 101.0
offset_right = 486.0
offset_bottom = 152.0
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_akw03")
step = 1.0

[node name="Enemy_EXP_Bar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="EXP" type="ProgressBar" parent="CanvasLayer/Enemy_EXP_Bar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 108.0
offset_top = 35.0
offset_right = 484.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_akw03")
max_value = 5.0
step = 1.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="CanvasLayer/Enemy_EXP_Bar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 112.0
offset_top = 31.0
offset_right = 488.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "LEVEL 1"

[node name="Lose_EXP" type="Button" parent="CanvasLayer/Enemy_EXP_Bar"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -224.0
offset_right = 179.0
offset_bottom = -165.0
grow_vertical = 0
text = "Lose EXP"

[node name="PlayerSprite" type="Sprite2D" parent="CanvasLayer"]

[node name="EnemySprite" type="Sprite2D" parent="CanvasLayer"]

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 113.0
offset_top = 175.0
offset_right = 213.0
offset_bottom = 234.0
grow_horizontal = 2
text = "Leave"

[node name="BattleMessage" type="Label" parent="CanvasLayer"]
custom_minimum_size = Vector2(400, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.5
offset_top = -25.5
offset_right = 8.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
autowrap_mode = 3
